{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 13,
  "lineage": "c95cafc0-5531-c683-809b-b1ad333d8919",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az-wazuh-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/networkInterfaces/az-wazuh-nic",
            "internal_domain_name_suffix": "pg21pbik2jgutjqoakeg11frtd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/publicIPAddresses/az-pub-ip",
                "subnet_id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network/subnets/az-subnet-1"
              }
            ],
            "location": "eastus",
            "name": "az-wazuh-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "az-wazuh-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.az-pub-ip",
            "azurerm_resource_group.az-wazuh-grp",
            "azurerm_subnet.az-subnet",
            "azurerm_virtual_network.az-wazuh-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az-wazuh-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/networkSecurityGroups/az-wazuh-sg",
            "location": "eastus",
            "name": "az-wazuh-sg",
            "resource_group_name": "az-wazuh-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "az-wazuh-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.az-wazuh-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "az-wazuh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/networkSecurityGroups/az-wazuh-sg/securityRules/az-wazuh-rule",
            "name": "az-wazuh-rule",
            "network_security_group_name": "az-wazuh-sg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "az-wazuh-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.az-wazuh-sg",
            "azurerm_resource_group.az-wazuh-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/publicIPAddresses/az-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "az-pub-ip",
            "resource_group_name": "az-wazuh-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.az-wazuh-grp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network/subnets/az-subnet-1",
            "name": "az-subnet-1",
            "resource_group_name": "az-wazuh-resources",
            "virtual_network_name": "az-wazuh-network"
          },
          "dependencies": [
            "azurerm_resource_group.az-wazuh-grp",
            "azurerm_virtual_network.az-wazuh-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "az-wazuh-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network/subnets/az-subnet-1",
            "network_security_group_id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/networkSecurityGroups/az-wazuh-sg",
            "subnet_id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network/subnets/az-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.az-wazuh-sg",
            "azurerm_resource_group.az-wazuh-grp",
            "azurerm_subnet.az-subnet",
            "azurerm_virtual_network.az-wazuh-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az-wazuh-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "85b7b979-e20a-494d-a60e-02886decb19b",
            "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network",
            "location": "eastus",
            "name": "az-wazuh-network",
            "resource_group_name": "az-wazuh-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/virtualNetworks/az-wazuh-network/subnets/az-subnet-1",
                "name": "az-subnet-1",
                "security_group": "/subscriptions/b0156e33-3c59-4e3a-af50-29c4fc6c5428/resourceGroups/az-wazuh-resources/providers/Microsoft.Network/networkSecurityGroups/az-wazuh-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.az-wazuh-grp"
          ]
        }
      ]
    }
  ]
}